--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <body>
         <div id="game"></div>
         <script src="js/lib/phaser.js"></script>    
-        <script src="js/instructions.js"></script>   
-        <script src="js/about.js"></script>
+        <script src="js/level1.js"></script>
+        <script src="js/screenInstructions.js"></script>
+        <script src="js/screenPlayer.js"></script>   
+        <script src="js/screenAbout.js"></script>
         <script src="js/init.js"></script>
         <script src="js/main.js"></script>
     </body>
