pantalla de fin creada

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="game"></div>
         <script src="js/lib/phaser.js"></script>    
         <script src="js/level1.js"></script>
+        <script src="js/screenEnd.js"></script>
         <script src="js/screenInstructions.js"></script>
         <script src="js/screenPlayer.js"></script>   
         <script src="js/screenAbout.js"></script>
