arreglos plataformas prueba

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <body>
         <div id="game"></div>
-        <script src="js/lib/phaser.js"></script>    
+        <script src="js/lib/phaser.js"></script> 
+        <script src="js/platform.js"></script>   
         <script src="js/level1.js"></script>
         <script src="js/screenEnd.js"></script>
         <script src="js/screenInstructions.js"></script>
