--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Juego ancestral</title>
+        <title>Apple Jump</title>
         <link rel="stylesheet" href="css/game.css">
     </head>
 
     <body>
         <div id="game"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script> 
         <script src="js/lib/phaser.js"></script> 
         <script src="js/platform.js"></script>   
         <script src="js/level1.js"></script>
