--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="js/character.js"></script> 
         <script src="js/platform.js"></script>   
         <script src="js/level1.js"></script>
+        <script src="js/level2.js"></script>
         <script src="js/screenEnd.js"></script>
         <script src="js/screenInstructions.js"></script>
         <script src="js/screenPlayer.js"></script>   
