primeras pruebas con obstaculos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="game"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script> 
         <script src="js/lib/phaser.js"></script>
+        <script src="js/obstacles.js"></script>
         <script src="js/character.js"></script> 
         <script src="js/platform.js"></script>   
         <script src="js/level1.js"></script>
