Elección de nombre empieza a funcionar
Todavía toca arreglarlo y darle formato, pero ya está bien encaminado.
He cambiado un poco la animación, he tocado formato y poco más.
He tocado el html y me queda por mejorar unas cuantas cosas pero poco a poco va a ir funcionando

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     </head>
 
     <body>
+        <div id = "player"> 
+            <input type= "button" id="aceptar_nombre" value="Acepto este nombre"><br>
+            <input type="radio" name="nombre" value="Newton"> Newton<br>
+            <input type="radio" name="nombre" value="Olga"> Olga<br>
+            <input type="radio" name="nombre" value="Sara"> Sara<br>
+            <input type="radio" name="nombre" value="Fer"> Fer<br>
+            <label for="player">Your name: </label>
+            <input type="text" id="player" name="nombre"><br><br>
+        </div>
         <div id="game"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script> 
         <script src="js/lib/phaser.js"></script>
