--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <div id = "player"> 
+        <div id = "player" style="display: none;"> 
             <input type= "button" id="aceptar_nombre" value="Acepto este nombre"><br>
             <input type="radio" name="nombre" value="Newton"> Newton<br>
             <input type="radio" name="nombre" value="Olga"> Olga<br>
