--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
 
     <body>
-        <div id = "player" style="display: none;"> 
-            <input type= "button" id="aceptar_nombre" value="Acepto este nombre"><br>
+        <div id = "player" style="display: none; position: absolute; left: 60%; top: 60%; font: '25px Sniglet'; " > 
+            <input type= "button" id="aceptar_nombre" value="Acepto este nombre" onclick="CambioNombre"><br>
             <input type="radio" name="nombre" value="Newton"> Newton<br>
             <input type="radio" name="nombre" value="Olga"> Olga<br>
             <input type="radio" name="nombre" value="Sara"> Sara<br>
