--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div id="game"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script> 
         <script src="js/lib/phaser.js"></script>
+        <script src="js/levelManager.js"></script> 
         <script src="js/character.js"></script> 
         <script src="js/levelAssets.js"></script>   
-        <script src="js/level1.js"></script>
-        <script src="js/level2.js"></script>
+        <script src="js/level.js"></script>
         <script src="js/screenEnd.js"></script>
         <script src="js/screenInstructions.js"></script>
         <script src="js/screenPlayer.js"></script>   
