--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <body>
         <div id = "player" style="display: none; position: absolute; left: 60%; top: 60%; font: '25px Sniglet'; " > 
-            <input type= "button" id="aceptar_nombre" value="Acepto este nombre" onclick="CambioNombre"><br>
-            <input type="radio" name="nombre" value="Newton"> Newton<br>
+            <input type= "button" id="aceptar_nombre" value="Acepto este nombre" onclick="CambiarNombre(this)"><br>
+            <input type="radio" id="NewtonName" name="nombre" value="Newton" checked> Newton<br>
             <input type="radio" name="nombre" value="Olga"> Olga<br>
             <input type="radio" name="nombre" value="Sara"> Sara<br>
             <input type="radio" name="nombre" value="Fer"> Fer<br>
