--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     </head>
 
     <body>
-        <div id = "player" style="display: none; position: absolute; left: 60%; top: 60%; font: '25px Sniglet'; " > 
-            <input type= "button" id="aceptar_nombre" value="Acepto este nombre" onclick="CambiarNombre(this)"><br>
-            <input type="radio" id="NewtonName" name="nombre" value="Newton" checked> Newton<br>
-            <input type="radio" name="nombre" value="Olga"> Olga<br>
-            <input type="radio" name="nombre" value="Sara"> Sara<br>
-            <input type="radio" name="nombre" value="Fer"> Fer<br>
+        <div id = "player" style="display: none; position: absolute; left: 60%; top: 60%;" > 
+            <input type="radio" id="Newton" name="nombre" value="Newton" checked onclick="CambiarNombre(this)"> Newton<br>
+            <input type="radio" id="Olga" name="nombre" value="Olga" onclick="CambiarNombre(this)"> Olga<br>
+            <input type="radio" id="Sara" name="nombre" value="Sara" onclick="CambiarNombre(this)"> Sara<br>
+            <input type="radio" id="Fer" name="nombre" value="Fer" onclick="CambiarNombre(this)"> Fer<br>
             <label for="player">Your name: </label>
-            <input type="text" id="player" name="nombre"><br><br>
+            <input type="text" id="LabelName" onchange="CambiarNombre(this)" name="nombre"><br><br>
         </div>
         <div id="game"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script> 
